 * Deprecated ApproximationAlgorithm.setVerbose/getVerbose
 * Deprecated EllipticalDistribution.setCorrelation/getCorrelation
 * Deprecated EllipticalDistribution.setMean
 * Student.setMu/getMu now operate on Point
 * Deprecated Distribution.computeDensityGenerator methods
 * Deprecated Point.clean
 * Deprecated (Inverse)Gamma.setKLambda
 * Deprecated Os::GetEndOfLine

=== Documentation ===
 * Improved coverage of class/methods
 * New two-degree-of-freedom oscillator use-case

=== Python module ===
 * New Graph.setLegendCorner method to set legend outside of Graph
 * Allowing use of matplotlib markers and legend location strings in Graphs

=== Miscellaneous ===
 * Improved pretty-printing of chaos functions, distributions
 * Added IterativeThresholdExceedance::getRatio
 * Added FunctionalChaosResult::drawSelectionHistory to plot LARS coefs paths
 * New API in SubsetSampling to get samples at each iteration
 * Added SubsetSampling method to set the initial experiment
 * Allowing use of non-independent copulas in LHSExperiment
 * Improved system events to allow more kinds of events like DomainEvent
 * Add CMake presets file

=== Bug fixes ===
 * #1338 (The example in UserDefined does not show how to create a uniform discrete distribution)
 * #1979 (The doc of KernelSmoothing has issues)
 * #2195 (SubsetSampling: keep the failed and secure points at each step)
 * #2216 (Characteristic function of the Triangular and Trapezoidal distributions)
 * #2220 (Negative value given by the computeComplementaryCDF method)
 * #2339 (FunctionalChaosSobolIndices has doc issues)
 * #2347 (Build error of /usr/include/tbb/machine/gcc_generic.h:39:20: error: operator '||' has no left operand in s390x on Fedora)
 * #2351 (Import error in the draw method example)
 * #2354 (IterativeThresholdExceedance)
 * #2371 (t-Copula implementation)
 * #2403 (KrigingAlgorithm fails if basis is empty)
 * #2406 (Student does not give access to all its parameters)